# auto_vi

./: .gitignore  README.md  config.toml  download.py  pyproject.toml
auto_vi/: __init__.py  __main__.py
auto_vi/core/: automation.py  capture.py  cli.py  config.py
auto_vi/grounding/: __init__.py  base.py  ocr.py  registry.py  template.py  vlm.py
auto_vi/workflow/: orchestrator.py
