[project]
name = "auto-vi"
version = "0.1.0"
description = "Vision-Based Desktop Automation with Dynamic Icon Grounding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mss==10.0.0",
    "Pillow==11.1.0",
    "pyautogui==0.9.54",
    "opencv-python==4.11.0.86",
    "requests==2.32.3",
    "easyocr==1.7.2",
    "pywinauto==0.6.8; sys_platform == 'win32'",
]

[project.scripts]
auto-vi = "auto_vi.core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
